Improved Dark Theme and Fixed ntopng layout for non-admin users
Cherry-picked from the dev branch. These commits improve the dark theme (especially for the notifications) and fixed a layout problem for the non-admin users

--- a/httpdocs/css/ntopng.css
+++ b/httpdocs/css/ntopng.css
@@ -879,3 +879,6 @@ footer {
   max-height: 16rem;
   overflow-y: auto;
 }
+.largegroup {
+  width:500px
+}
